src/test/error/var2.lns
fn func() {
   let! mut val1 { // error
   };
}
